# diesel-mysql

./: .env  Cargo.toml  README.md  export.sh
src/: main.rs
src/config/: database.rs
src/model/: user.rs
src/models/: user.rs
src/route/: hello_route.rs  mod.rs
src/routes/: route.rs
src/service/: ping_service.rs
src/services/: service.rs
