[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Naim Aryudya <naimaryudya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["r2d2","mysql"] }
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"