[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Naim Aryudya <naimaryudya@gmail.com>"]
edition = "2018"
default-run = "actix-demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["r2d2","mysql"] }
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"]}


[[bin]]
name = "another_bin"
path = "src/bin/another_bin.rs"

[[bin]]
name = "testhttp"
path = "src/bin/testhttp.rs"